Adjusted spacing to prevent the left side from collapsing

--- a/src/components/Layout/Layout.module.scss
+++ b/src/components/Layout/Layout.module.scss
@@ -3,11 +3,11 @@
 
 .Layout {
     width: 100vw;
-    height: 100vh;
     margin: auto;
 
     .LeftSide,
     .RightSide {
+        min-height: 1px;
         height: 100%;
         float: left;
     }
@@ -18,6 +18,7 @@
 
     .RightSide {
         width: 50%;
+        padding-bottom: lengths.$space-from-bottom;
     }
 
     @media only screen and (max-width: breakpoints.$big) {
@@ -44,10 +45,6 @@
         .LeftSide,
         .RightSide {
             padding: 0 lengths.$big;
-        }
-
-        .RightSide {
-            padding-bottom: lengths.$space-from-bottom;
         }
     }
 }
